2003-10-14  Pavel Roskin  <proski@gnu.org>

	* cmd.c: Cleanup of unneeded global functions and data.
	* color.c: Likewise.
	* dir.c: Likewise.
	* file.c: Likewise.
	* filegui.c: Likewise.
	* hotlist.c: Likewise.
	* layout.c: Likewise.
	* main.c: Likewise.
	* panelize.c: Likewise.
	* wtools.c: Likewise.

2003-10-12  Pavel Roskin  <proski@gnu.org>

	* screen.c (do_enter_on_file_entry): Remove annoying message "no
	action taken".  Simplify logic.  Confirmation affects VFS too.

2003-10-11  Pavel Roskin  <proski@gnu.org>

	* vfsdummy.h: New file to replace vfs.h if VFS is disabled.
	* Makefile.am: Add vfsdummy.h.
	* global.h [!USE_VFS]: Include vfsdummy.h.  Fix files that
	include vfs.h directly.

	* file.c (check_hardlinks): Use vfs_file_class_flags().

	* main.c (_do_panel_cd): Use vfs_release_path().

	* file.c: Use struct vfs_class, not type vfs, which should be
	internal to VFS code.

2003-10-08  Pavel Roskin  <proski@gnu.org>

	* background.h: Eliminate background_wait variable.  Adjust all
	dependencies.

	* main.c (argument_table): Reorder options into logical groups.

2003-10-07  Pavel Roskin  <proski@gnu.org>

	* dlg.c (dlg_broadcast_msg): Use widget_msg_t type.
	(dlg_broadcast_msg_to): Likewise.

2003-09-29  Koblinger Egmont  <egmont@uhulinux.hu>

	* main.c (copy_other_pathname): Trailing slash in not always
	inserted when it should be.

2003-09-29  Andrew V. Samoilov  <sav@bcs.zp.ua>

	* find.c (do_search): Use strncpy() instead if unsafe strcpy().
	Check mc_(l)stat() return values.

2003-09-24  Pavel Roskin  <proski@gnu.org>

	* key.c (xterm_key_defines): More sequences for gnome-terminal.

2003-09-23  Pavel Roskin  <proski@gnu.org>

	* key.c (xterm_key_defines): Add more sequences.

2003-09-22  Pavel Roskin  <proski@gnu.org>

	* find.c (find_file): Don't call file_mark(), it would use
	uninitialized data.
	* main.c (panel_clean_dir): Make panel dirty.

	* glibcompat.c: New file for compatibility with older versions
	of glib.
	* glibcompat.h: Likewise.